--- a/Jour3/src/main/resources/templates/view.html
+++ b/Jour3/src/main/resources/templates/view.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Liste BLYAT</title>
 </head>
 <body>
+    <form method="post">
+        <label for="id">Id (Only for modify):</label>
+        <input type="text" id="id" name="id"><br><br>
 
+        <label for="name">Name :</label>
+        <input type="text" id="name" name="name" required><br><br>
+
+        <label for="age">Age :</label>
+        <input type="text" id="age" name="age" required><br><br>
+
+        <input type="submit" value="Submit" formaction="/savePerson">
+        <input type="submit" value="Modify" formaction="/modifyPerson">
+        <input type="submit" value="Delete" formaction="/deletePerson">
+
+    </form>
+    <p th:text="${confirmMessage}"></p>
+
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Nom</th>
+                <th>Age</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="Person : ${personnes}">
+                <td th:text="${Person.getId()}"></td>
+                <td th:text="${Person.getName()}"></td>
+                <td th:text="${Person.getAge()}"></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
